<resources>
    <string name="app_name">AndroidProjectCollection</string>
    <!--Buttons-->
    <string name="btn_start">Layout Exercise</string>
    <string name="btn_end">Calculator</string>
    <string name="btn_exit">Match 3</string>
    <string name="btn_next">Button Exercise</string>
    <string name="btn_tictactoe">MIDTERMS - TIC TAC TOE</string>
    <string name="btn_form">Passing Intents</string>
    <string name="btn_fragments">Fragments</string>
    <string name="btn_menu">Menus</string>

    <string name="btn_close">Close</string>
    <string name="btn_toast">Toast</string>
    <string name="btn_change_bg">Change BG</string>
    <string name="btn_change_btn_bg">Change Button BG</string>
    <string name="btn_disappear">Disappear</string>


    <string name="btn_return">Return</string>

    <!-- Holders -->
    <string name="hldr_blank" />
    <string name="hldr_comment">Comment</string>


    <!-- Usernames -->
    <string name="guada">its_guadalueee</string>
    <string name="paul">its_paul</string>
    <string name="francis">its_franci_zzz</string>
    <string name="nina">its_ninzzz</string>
    <string name="nicole">bun_nieee</string>
    <string name="ana">ana_banana</string>
    <string name="lee">jerem_lee</string>
    <string name="gelo">gelotinnn</string>
    <string name="ray">its_rayyy</string>

    <!--Calculator-->
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="clr">Clear</string>
    <string name="dec">.</string>
    <string name="mult">x</string>
    <string name="div">/</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="equal">=</string>

    <string name="res">0</string>

    <!--Match3-->
    <string name="match_header">COLOR MATCH</string>
    <string name="btn_restart">Restart</string>
    <string name="score">Score:</string>
    <string name="init_play_display">Player O\'s Turn</string>

    <!--Student Registration Form-->
    <string name="stf">Student Registration Form</string>
    <string name="stp">Student Profile</string>
    <string name="name">Complete Name</string>
        <string name="fname">First Name</string>
        <string name="lname">Last Name</string>
    <string name="gender">Gender</string>
        <string name="male">Male</string>
        <string name="female">Female</string>
        <string name="others">Others</string>
    <string name="bdate">Birth Date</string>
    <string name="number">Phone Number</string>
    <string name="email">Email Address</string>

    <string name="age">Age</string>
    <string name="year">Year Level</string>

    <string name="course">Course</string>
    <string name="address">Address</string>
    <string name="hob_int">Hobbies/Interests</string>

    <string name="submit">Submit</string>
</resources>