<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonExercise">

    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_close"
        app:layout_constraintBottom_toTopOf="@+id/btn_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_toast"
        app:layout_constraintBottom_toTopOf="@+id/btn_changeBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_close" />

    <Button
        android:id="@+id/btn_changeBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_bg"
        app:layout_constraintBottom_toTopOf="@+id/btn_changeBtnBG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_toast" />

    <Button
        android:id="@+id/btn_changeBtnBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_change_btn_bg"
        app:layout_constraintBottom_toTopOf="@+id/btn_disappear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_changeBG" />

    <Button
        android:id="@+id/btn_disappear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_disappear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_changeBtnBG" />
</androidx.constraintlayout.widget.ConstraintLayout>