<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">-->

    <!--<LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.73">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toTopOf="@+id/input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintBottom_toTopOf="@+id/row1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/input">

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn7"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="266dp" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn8"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="266dp" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn9"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="208dp"
                tools:layout_editor_absoluteY="266dp" />

            <Button
                android:id="@+id/btn_div"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/div"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="296dp"
                tools:layout_editor_absoluteY="266dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/row3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row1">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn4"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="356dp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn5"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="356dp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn6"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="216dp"
                tools:layout_editor_absoluteY="346dp" />

            <Button
                android:id="@+id/btn_mult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/mult"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="296dp"
                tools:layout_editor_absoluteY="356dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/row4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row2">

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="22dp"
                tools:layout_editor_absoluteY="436dp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="441dp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="216dp"
                tools:layout_editor_absoluteY="436dp" />

            <Button
                android:id="@+id/btn_sub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/sub"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="296dp"
                tools:layout_editor_absoluteY="439dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/row3">

            <Button
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/btn0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="529dp" />

            <Button
                android:id="@+id/btn_dec"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/dec"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="128dp"
                tools:layout_editor_absoluteY="529dp" />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/equal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="223dp"
                tools:layout_editor_absoluteY="521dp" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:layout_editor_absoluteX="303dp"
                tools:layout_editor_absoluteY="521dp" />
        </LinearLayout>
    </LinearLayout>


    <!--</LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>